--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div id="slot-machine">
   <div class="reel" *ngFor="let reel of reels">
     <div class="symbol" *ngFor="let symbol of reel.symbols" [style.backgroundColor]="symbol.color"></div>
+    <div class="reel-glass"></div>
+  </div>
+  <div style="height: 100%; width: 100%; position: absolute">
+    <svg style="position: absolute" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none" app-payline *ngFor="let payline of paylineValues" [winningRows]="payline" [totalRows]="numberOfRows"></svg>
   </div>
 </div>
-<button (click)="start()">Start</button>  <button (click)="stop()">Stop</button>
+<button (click)="start()">Start</button>  <button (click)="stop()">Stop</button> <p>{{winnings}}</p>
