--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,22 +62,22 @@ $number-of-rows: 5;
     max-height: calc((80vh - (2 * #{$slot-column-margin})) / #{$number-of-rows});
     position: relative;
     float: left;
-    border-color: grey;
-    border-width: 2px;
-    border-style: solid;
-    border-left-style: none;
-    border-right-style: none;
-    box-sizing: border-box;
+    // border-color: grey;
+    // border-width: 2px;
+    // border-style: solid;
+    // border-left-style: none;
+    // border-right-style: none;
+    // box-sizing: border-box;
     animation: insert-symbol 0.080s linear;
     overflow: hidden;
 }
 
-.symbol-basic {
+.symbol-common {
     background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 5%, rgb(181, 181, 181) 100%);
 }
 
 .symbol-rainbow {
-    background: radial-gradient(circle, rgba(36,18,0,1) 0%, rgba(121,9,109,1) 17%, rgba(6,174,161,1) 51%, rgba(4,197,16,1) 61%, rgba(198,152,12,1) 73%, rgba(191,199,8,1) 86%, rgba(255,0,0,1) 100%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(121,9,109,1) 17%, rgba(6,174,161,1) 51%, rgba(4,197,16,1) 61%, rgba(198,152,12,1) 73%, rgba(191,199,8,1) 86%, rgba(255,0,0,1) 100%);
 }
 
 .symbol-teal {
@@ -103,7 +103,19 @@ $number-of-rows: 5;
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: calc((2 * #{$slot-column-margin})/#{$number-of-rows});
+}
+
+.symbol-image-won {
+    animation: move-symbol 1.25s linear infinite;
+}
+
+.symbol-rare > .symbol-image-won {
+    animation: rotate-grow-symbol 1.25s linear infinite;
+}
+
+.symbol-jackpot > .symbol-image-won {
+    animation: spin 2s linear infinite;
 }
 
 .new-symbol {
@@ -141,5 +153,65 @@ $number-of-rows: 5;
     }
     100% {
         border-color: rgba(0,0,0,0);
+    }
+}
+
+@keyframes rotate-grow-symbol {
+    0% {
+        transform: rotate(0deg);
+        transform: scale(1);
+    }
+    11% {
+        transform: rotate(20deg);
+    }
+    24% {
+        transform: rotate(0deg);
+    }
+    37% {
+        transform: rotate(-20deg);
+    }
+    50% {
+        transform: rotate(0deg);
+        transform: scale(1.5);
+    }
+    63% {
+        transform: rotate(20deg);
+    }
+    77% {
+        transform: rotate(0deg);
+    }
+    90% {
+        transform: rotate(-20deg);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+        transform: scale(1);
+    } 
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes move-symbol {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    25% {
+        transform: translate(0px, -.5vh);
+    }
+    75% {
+        transform: translate(0px, .5vh);
+    }
+    100% {
+        transform: translate(0px, 0px);
     }
 }
