--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,6 @@
     <svg style="position: absolute" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none" app-payline *ngFor="let payline of paylineValues" [winningRows]="payline" [totalRows]="numberOfRows"></svg>
   </div>
 </div>
-<button (click)="startStop()" [disabled]="this.stopping">{{spinning ? "Stop" : "Start"}}</button> <p>{{winnings}}</p>
+<div id="betting-section">
+  <button (click)="startStop()" [disabled]="this.stopping">{{spinning ? "Stop" : "Start"}}</button> <p>{{winnings}}</p>
+</div>
