--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,11 +5,11 @@ $number-of-rows: 5;
 #slot-machine {
     background-color: black;
     margin-left: 2vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
     width: 96vw;
     height: 50vw;
     max-height: 80vh;
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: space-between;
     border-radius: 3px;
@@ -17,6 +17,15 @@ $number-of-rows: 5;
     border-style: solid;
     border-width: $slot-column-margin;
     box-sizing: border-box;
+}
+
+#betting-section {
+    position: relative;
+    width: 80vw;
+    margin-left: 10vw;
+    height: 15vh;
+    background-color: black;
+    margin-top: 0vh;
 }
 
 .reel {
