--- a/projects/slot-machine/src/lib/slot-machine.component.scss
+++ b/projects/slot-machine/src/lib/slot-machine.component.scss
@@ -30,43 +30,55 @@ $number-of-rows: 5;
     position: relative;
     width: 96vw;
     margin-left: 2vw;
-    height: 15vh;
+    height: 15vw;
+    max-height: 15vh;
     box-sizing: border-box;
     background: linear-gradient(0deg, rgba(143,143,143,1) 0%, rgba(200,200,200,1) 15%, rgba(210,210,210,1) 50%, rgba(200,200,200,1) 85%, rgba(143,143,143,1) 100%);
     border-left: 2px solid;
     border-right: 2px solid;
     border-top: 1px solid;
     border-color: rgba(143,143,143,1);
-    padding-left: 10vh;
-    padding-right: 10vh;
+    padding-left: 10vw;
+    padding-right: 10vw;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
 }
 
+#winnings-label {
+    position: relative;
+    float: left;
+    font-size: 9vmin;
+    margin-top: 1.5vmin;
+}
+
 #winnings {
-    position: absolute;
+    position: relative;
+    float: left;
     background-color: white;
     color: black;
     box-shadow: inset 0 0 5px black; 
-    margin-top: 1.5vh;
-    height: 12vh;
-    width: 40vh;
-    font-size: 10vh;
-    text-align: right;
-    padding-right: 1vh;
+    margin-top: 1.5vmin;
+    max-height: 12vh;
+    height: 11vmin;
+    width: 32vw;
+    max-width: 50vh;
+    font-size: 9vmin;
+    text-align: center;
+    font-style: Tahoma;
 }
 
 #spin-button {
     position: relative;
     float: right;
-    margin-top: 2.5vh;
-    height: 10vh;
-    width: 20vh;
-    right: $slot-column-margin;
+    margin-top: 1.5vmin;
+    max-height: 12vh;
+    max-width: 20vh;
+    height: 11vmin;
+    width: 24vw;
     border-radius: $slot-column-margin;
     border-style: solid;
     border-width: $slot-column-margin;
-    font-size: 5vh;
+    font-size: 5vmin;
 }
 
 .start-button {
