--- a/projects/slot-machine/src/lib/slot-machine.component.scss
+++ b/projects/slot-machine/src/lib/slot-machine.component.scss
@@ -1,27 +1,34 @@
 $slot-column-margin: 7px;
+$machine-radius: 3px;
 $number-of-reels: 5;
 $number-of-rows: 5;
 
+// @media screen and (orientation: portrait) {
+//     html {
+//       transform: rotate(-90deg);
+//       transform-origin: left top;
+//       width: 100vh;
+//       overflow-x: hidden;
+//       position: absolute;
+//       top: 100%;
+//       left: 0;
+//     }
+//   }
+
 #slot-machine {
     background: linear-gradient(0deg, rgba(143,143,143,1) 0%, rgba(62,62,62,1) 50%, rgba(247,247,247,1) 100%);
-    margin-left: 2vw;
-    margin-top: 2.5vh;
+    margin: 2.5vh 0 0 2vw;
+    padding: 0 $slot-column-margin 0 $slot-column-margin;
     width: 96vw;
     height: calc(50vw - 2px);
     max-height: calc(80vh - 2px);
     position: relative;
     display: flex;
     justify-content: space-between;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-radius: $machine-radius $machine-radius 0 0;
     overflow: hidden;
-    border-style: solid;
-    border-bottom-color: rgba(143,143,143,1);
-    border-top-color: rgba(247,247,247,1);
-    border-left-style: none;
-    border-right-style: none;
-    padding-left: $slot-column-margin;
-    padding-right: $slot-column-margin;
+    border-style: solid none solid none;
+    border-color: rgba(247,247,247,1) black rgba(143,143,143,1) black;
     border-width: $slot-column-margin;
     box-sizing: border-box;
 }
@@ -34,43 +41,90 @@ $number-of-rows: 5;
     max-height: 15vh;
     box-sizing: border-box;
     background: linear-gradient(0deg, rgba(143,143,143,1) 0%, rgba(200,200,200,1) 15%, rgba(210,210,210,1) 50%, rgba(200,200,200,1) 85%, rgba(143,143,143,1) 100%);
-    border-left: 2px solid;
-    border-right: 2px solid;
-    border-top: 1px solid;
+    border-style: solid solid none solid;
+    border-width: 1px 2px 0 2px;
     border-color: rgba(143,143,143,1);
-    padding-left: 10vw;
-    padding-right: 10vw;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    padding: 0 3% 0 3%;
+    border-radius: 0 3px 0 3px;
+}
+
+#betting-section > * {
+    margin-top: 1.5vmin;
 }
 
 #winnings-label {
     position: relative;
     float: left;
     font-size: 9vmin;
-    margin-top: 1.5vmin;
+}
+
+.value-box {
+    text-align: center;
+    font-style: Tahoma;
+    background-color: white;
+    color: black;
+    box-shadow: inset 0 0 5px black; 
 }
 
 #winnings {
     position: relative;
     float: left;
-    background-color: white;
-    color: black;
-    box-shadow: inset 0 0 5px black; 
-    margin-top: 1.5vmin;
-    max-height: 12vh;
     height: 11vmin;
+    max-height: 12vh;
     width: 32vw;
     max-width: 50vh;
     font-size: 9vmin;
+}
+
+#bet-picker {
+    position: relative;
+    float: left;
+    margin-left: 5vw;
+    height: 11vmin;
+    width: 20vw;
+    max-width: 20vh;
+}
+
+#bet-amount-label {
+    width: 70%;
+    height: 4vmin;
+    margin: 0;
+    float: left;
+    font-size: 3vmin;
     text-align: center;
-    font-style: Tahoma;
+}
+
+#bet-amount {
+    position: relative;
+    width: 70%;
+    height: 7vmin;
+    float: left;
+    font-size: 6vmin;
+    margin: 0;
+}
+
+#bet-amount-controls {
+    width: 30%;
+    float: right;
+    height: 100%;
+}
+
+.bet-picker-button {
+    position: relative;
+    width: 100%;
+    height: 5.5vmin;
+    text-align: center;
+    margin: 0;
+    border-style: solid;
+    border-radius: $slot-column-margin;
+    font-size: 4vmin;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 #spin-button {
     position: relative;
     float: right;
-    margin-top: 1.5vmin;
     max-height: 12vh;
     max-width: 20vh;
     height: 11vmin;
@@ -81,25 +135,25 @@ $number-of-rows: 5;
     font-size: 5vmin;
 }
 
-.start-button {
+.green-button {
     border-color: rgb(43, 174, 0);
     background: linear-gradient(45deg, rgb(186, 255, 163) 0%, rgb(118, 213, 90) 100%);
     box-shadow: 0 0 5px black;
     color: green;
 }
 
-.start-button:active, .stop-button:active {
+.green-button:active, .red-button:active {
     box-shadow: none;
 }
 
-.start-button:disabled {
+.green-button:disabled {
     border-color: rgb(172, 172, 172);
     background: linear-gradient(45deg, rgb(239, 255, 234) 0%, rgb(214, 214, 214) 100%);
     box-shadow: none;
     color: rgb(101, 101, 101);
 }
 
-.stop-button {
+.red-button {
     border-color: rgb(174, 0, 0);
     background: linear-gradient(45deg, rgb(255, 163, 163) 0%, rgb(213, 90, 90) 100%);
     box-shadow: 0 0 5px black;
